# penning_trap

./: .gitignore  CMakeLists.txt  README.md  error_analysis.cpp  main.cpp  two_part_plot.py  twobody.cpp  twobody_plots.py  twobodyplots.py
include/: header.hpp  particle.hpp  penning.hpp  useful.hpp
plots/: err_16000.txt  err_32000.txt  err_4000.txt  err_64000.txt  err_8000.txt  error_analysis.py  resonance.py  twobody.py
src/: error_analysis.cpp  error_analysis.py  header.cpp  particle.cpp  penning.cpp  resonance.cpp  resonance.py  twobody.cpp  twobody.py  useful.cpp
test/: particle-test.cpp  penning-test.cpp
